# ruffini

./: .gitignore  CMakeLists.txt  CMakelists.txt  main.cpp
include/: CMakeLists.txt
include/ruffini/: App.hpp
include/ruffini/types/: Binomial.hpp  Monomial.hpp
src/: CMakeLists.txt  main.cpp
src/ruffini/: App.cpp  App.hpp
src/ruffini/string-colorizer/: colorizer.hpp
src/ruffini/types/: Factor.hpp  Monomial.hpp  Polynomial.hpp
tests/: tests.cpp
